--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -69,11 +69,12 @@
                         &--icon-close {
                             &::before {
                                 background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M1.715 14.285l12.57-12.57m0 12.57L1.715 1.715' stroke='%23000' stroke-width='.75' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-                                
                             }
                         }
 
-
+                        &:focus {
+                            outline: none;
+                        }
                     }
                 }
 
@@ -237,7 +238,34 @@
                 }
             }
         }        
-    }}
+    }
+
+    &__secondary {
+        background-color: white;
+        padding-top: 1.5rem;
+        padding-bottom: .5rem;
+
+        &--no-menu {
+            padding-bottom: 1.5rem;
+        }
+    }
+
+    &__site-title {
+        margin: 0;
+        font-size: 1.25rem;
+        font-weight: 500;
+        color: $uq-purple;
+        
+        &:hover {
+            color: $uq-purple;
+            text-decoration: none;
+        }
+    }
+}
+
+.story--expanded {
+    background: $uq-neutral1;
+}
 
 // 
 // Logo
