--- a/packages/core/src/scss/_partials/_compass.scss
+++ b/packages/core/src/scss/_partials/_compass.scss
@@ -77,4 +77,4 @@ $rhythm-unit:       'rem';
  * Compass mixins
  * =================
  */
-@import '../../../../../compass-mixins/lib/compass';
+@import 'compass-mixins/lib/compass';
