--- a/packages/icon/src/scss/_global.scss
+++ b/packages/icon/src/scss/_global.scss
@@ -1,6 +1,6 @@
 
-@use "../../../core/src/scss/foundation-global" as *;
-@use "../../../core/src/scss/global" as *;
+@use "@uqmchu/core/src/scss/foundation-global" as *;
+@use "@uqmchu/core/src/scss/global" as *;
 @use './_icons.scss' as *;
 
 $icon-white: $uq-white;
