--- a/packages/pane/src/scss/_component.scss
+++ b/packages/pane/src/scss/_component.scss
@@ -1,5 +1,5 @@
-@use '../../../core/src/scss/_foundation-global' as *;
-@use '../../../core/src/scss/_global' as *;
+@use '@uqmchu/core/src/scss/_foundation-global' as *;
+@use '@uqmchu/core/src/scss/_global' as *;
 @use "global" as *;
 
 //
