--- a/packages/storybook-html/src/components/core/_colours.scss
+++ b/packages/storybook-html/src/components/core/_colours.scss
@@ -1,5 +1,5 @@
-@use '~@uqmchu/core/src/scss/foundation-global' as *;
-@use '~@uqmchu/core/src/scss/global' as *;
+@use '@uqmchu/core/src/scss/foundation-global' as *;
+@use '@uqmchu/core/src/scss/global' as *;
 
 .story-color-swatch-list {
   display: flex;
