--- a/packages/storybook-html/src/components/pagination/pagination.scss
+++ b/packages/storybook-html/src/components/pagination/pagination.scss
@@ -1,4 +1,4 @@
-@import '~@uqmchu/pagination/src/scss/_component';
+@import '@uqmchu/pagination/src/scss/_component';
 
 // Please don't apply random global styles here. You will affect other stories.
 // If you must style a story, please consider scoping to ensure no style 
