--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -1,7 +1,7 @@
-@use '../../../core/src/scss/_foundation-global' as *;
-@use '../../../core/src/scss/_global' as *;
+@use '@uqmchu/core/src/scss/_foundation-global' as *;
+@use '@uqmchu/core/src/scss/_global' as *;
 @use 'global' as *;
-@import "../../../core/src/fonts/uq-icons/scss/mixins";
+@import "@uqmchu/core/src/fonts/uq-icons/scss/mixins";
 
 // Accordion / Toggle style
 //
