--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -1,7 +1,7 @@
 // Variables, functions, and mixins
 
-@use '../../../core/src/scss/_foundation-global' as *;
-@use '../../../core/src/scss/_global' as *;
+@use '@uqmchu/core/src/scss/_foundation-global' as *;
+@use '@uqmchu/core/src/scss/_global' as *;
 
 $button-font: $roboto;
 
