--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -1,7 +1,7 @@
-@use '../../../core/src/scss/_foundation-global' as *;
-@use "../../../core/src/scss/global" as *;
+@use '@uqmchu/core/src/scss/_foundation-global' as *;
+@use "@uqmchu/core/src/scss/global" as *;
 @use "global" as *;
-@import "../../node_modules/font-awesome/scss/mixins";
+@import "font-awesome/scss/mixins";
 
 // Cards
 // Used in the Card Grid component.
