--- a/packages/storybook-html/src/components/blockquote/blockquote.scss
+++ b/packages/storybook-html/src/components/blockquote/blockquote.scss
@@ -1,5 +1,5 @@
-@use '~@uqmchu/blockquote/src/scss/_component' as * with (
-    $image-path: '~@uqmchu/blockquote/src/images'
+@use '@uqmchu/blockquote/src/scss/_component' as * with (
+    $image-path: '../../../node_modules/@uqmchu/blockquote/src/images'
 );
 
 // Please don't apply random global styles here. You will affect other stories.
