--- a/packages/storybook-html/src/components/form/examples/password-reset.scss
+++ b/packages/storybook-html/src/components/form/examples/password-reset.scss
@@ -1,5 +1,5 @@
-@use '~@uqmchu/core/src/scss/foundation-global' as *;
-@use '~@uqmchu/core/src/scss/global' as *;
+@use '@uqmchu/core/src/scss/foundation-global' as *;
+@use '@uqmchu/core/src/scss/global' as *;
 
 .story-password-strength-meter {
   font-size: .875rem;
