--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -1,11 +1,11 @@
-@use "@uqmchu/core/src/scss/_component" as core with (
-  $uq-font-path: "../node_modules/@uqmchu/core/src/fonts/uq-icons/font",
+@use "@uq-uidf/core/src/scss/_component" as core with (
+  $uq-font-path: "../node_modules/@uq-uidf/core/src/fonts/uq-icons/font",
   $fa-font-path: "../node_modules/font-awesome/fonts",
-  $uq-bg-image-path: '../node_modules/@uqmchu/core/src/images'
+  $uq-bg-image-path: '../node_modules/@uq-uidf/core/src/images'
 );
-@use "@uqmchu/body/src/scss/_component" as body;
+@use "@uq-uidf/body/src/scss/_component" as body;
 
-// Prevent the @uqmchu/core from imposing a background colour. Overrides the
+// Prevent the @uq-uidf/core from imposing a background colour. Overrides the
 // Foundation 5.5.3 default styling of the body tag.
 body {
   background-color: transparent !important;
