header, storybook-html: fix for SASS changes, remove detritus
Also refactored bg-colour style for story into background add-on settings

--- a/packages/header/src/scss/_global.scss
+++ b/packages/header/src/scss/_global.scss
@@ -1,4 +1,3 @@
 // Variables, functions, and mixins
 
-@use "../../node_modules/@uq-uidf/core/src/scss/global" as *;
-
+@use "@uq-uidf/core/src/scss/global" as *;
