--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -1,5 +1,5 @@
-@use '../../node_modules/@uq-uidf/core/src/scss/_foundation-global' as *;
-@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use '@uq-uidf/core/src/scss/_foundation-global' as *;
+@use '@uq-uidf/core/src/scss/_global' as *;
 @use 'global' as *;
 
 //
@@ -263,11 +263,7 @@
     }
 }
 
-.story--expanded {
-    background: $uq-neutral1;
-}
-
-// 
+//
 // Logo
 // 
 .logo img {
