Consolidate Colors Black & White to its Variables

--- a/packages/accordion/src/scss/_global.scss
+++ b/packages/accordion/src/scss/_global.scss
@@ -4,5 +4,5 @@ $accordion-border-color: #e9e9e9;
 $accordion-title-bg: #f9f9f9;
 $accordion-title-bg-hover: #eee;
 $accordion-icon-color: #bbb;
-$accordion-content-bg: #fff;
+$accordion-content-bg: $uq-white;
 $accordion-editor-outline: #f00;
