--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -5,15 +5,15 @@
 
 $button-font: $roboto;
 
-$button-color: #fff;
-$button-hover-color: #fff;
+$button-color: $uq-white;
+$button-hover-color: $uq-white;
 $button-bg-color: $link-color;
 $button-bg-hover-color: $link-active-color;
 $button-border-color: $link-color;
 $button-border-hover-color: $link-active-color;
 
 $button-secondary-color: #2b2b2b;
-$button-secondary-hover-color: #000000;
+$button-secondary-hover-color: $uq-black;
 $button-secondary-bg-color: #d7d1cc;
 $button-secondary-bg-hover-color: #bdb0a5;
 $button-secondary-border-color: #d7d1cc;
