--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -78,7 +78,7 @@
   @extend %tint;
   &::before {
       @extend %tint-overlay;
-      background: #fff;
+      background: $uq-white;
   }
 }
 
@@ -88,7 +88,7 @@
   background-color: $dark-tint-bg;
   &::before {
       @extend %tint-overlay;
-      background: #000;
+      background: $uq-black;
   }
 }
 
