--- a/packages/form/src/scss/_legacy.scss
+++ b/packages/form/src/scss/_legacy.scss
@@ -145,7 +145,7 @@ input:not([type]), input[type=text], input[type=password], input[type=date], inp
   -webkit-appearance: none;
   -moz-appearance: none;
   border-radius: 0;
-  background-color: #FFFFFF;
+  background-color: $uq-white;
   border-style: solid;
   border-width: 1px;
   border-color: #cccccc;
@@ -285,7 +285,7 @@ textarea {
 select {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
-  background-color: #fff;
+  background-color: $uq-white;
   border-radius: 0;
   background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+");
   background-position: 100% center;
@@ -365,7 +365,7 @@ fieldset legend {
   margin-top: -1px;
   padding: 0.375rem 0.5625rem 0.5625rem;
   background: #f04124;
-  color: #FFFFFF;
+  color: $uq-white;
 }
 [data-abide] span.error, [data-abide] small.error {
   display: none;
@@ -380,7 +380,7 @@ span.error, small.error {
   margin-top: -1px;
   padding: 0.375rem 0.5625rem 0.5625rem;
   background: #f04124;
-  color: #FFFFFF;
+  color: $uq-white;
 }
 
 .error input,
@@ -405,7 +405,7 @@ span.error, small.error {
   margin-top: -1px;
   padding: 0.375rem 0.5625rem 0.5625rem;
   background: #f04124;
-  color: #FFFFFF;
+  color: $uq-white;
 }
 .error > label > small {
   background: transparent;
