--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -117,11 +117,11 @@
 
       &:hover {
         background-color: $link-color;
-        color: #fff;
+        color: $uq-white;
 
         .grid-menu__description {
           background-color: $link-color;
-          color: #fff;
+          color: $uq-white;
         }
       }
     }
