--- a/packages/main-menu/src/scss/_global.scss
+++ b/packages/main-menu/src/scss/_global.scss
@@ -1,5 +1,5 @@
-$main-menu-color: #000;
-$main-menu-bg-color: #fff;
+$main-menu-color: $uq-black;
+$main-menu-bg-color: $uq-white;
 $main-menu-secondary-bg-color: #f2f2f2;
 $main-menu-bg-hover: darken(#f2f2f2, 4.5%);
 $main-menu-border: darken(#f2f2f2, 10%);
