--- a/packages/grid-menu/src/scss/_global.scss
+++ b/packages/grid-menu/src/scss/_global.scss
@@ -4,9 +4,9 @@
 @use '@uq-uidf/foundation-block-grid/src/scss/global' as *;
 
 $linked-list-color: $link-color;
-$linked-list-color-hover: #fff;
+$linked-list-color-hover: $uq-white;
 $linked-list-desc: #222;
-$linked-list-desc-hover: #fff;
+$linked-list-desc-hover: $uq-white;
 
 // Two column layout.
 @mixin grid-menu-2-column {
