--- a/packages/foundation-misc/src/scss/_component.scss
+++ b/packages/foundation-misc/src/scss/_component.scss
@@ -1,4 +1,5 @@
-@use 'global';
+@use '@uq-uidf/foundation-global/src/scss/global' as *;
+@use 'global' as *;
 
 // Enable Zurb Foundation Responsive Text alignment
 @include align-classes;
