--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -1,5 +1,6 @@
-@use '@uq-uidf/core/src/scss/_foundation-global' as *;
 @use "@uq-uidf/core/src/scss/global" as *;
+@use "@uq-uidf/foundation-global/src/scss/global" as *;
+@use "@uq-uidf/foundation-grid/src/scss/global" as *;
 @use "global" as *;
 @import "font-awesome/scss/mixins";
 
