--- a/packages/foundation-grid/src/scss/_component.scss
+++ b/packages/foundation-grid/src/scss/_component.scss
@@ -1,4 +1,5 @@
-@use 'global';
+@use '@uq-uidf/foundation-global/src/scss/global' as *;
+@use 'global' as *;
 
 @include exports("grid") {
   @if $include-html-grid-classes {
