--- a/packages/main-menu/src/scss/_global.scss
+++ b/packages/main-menu/src/scss/_global.scss
@@ -1,3 +1,5 @@
+@use "../../node_modules/@uq-uidf/core/src/scss/_global" as *;
+
 $main-menu-color: $uq-black;
 $main-menu-bg-color: $uq-white;
 $main-menu-secondary-bg-color: #f2f2f2;
