section: fix dependencies

--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -1,6 +1,7 @@
 // Main component stylesheet
-@use '../../node_modules/@uq-uidf/core/src/scss/_foundation-global' as *;
-@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/foundation-global/src/scss/global' as *;
+@use '@uq-uidf/foundation-grid/src/scss/global' as *;
 @use 'global' as *;
 
 //
