added header dependencies and markup to example output

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -19,6 +19,7 @@
 @use 'footer/src/scss/component' as footer;
 @use 'form/src/scss/component' as form;
 @use 'grid-menu/src/scss/component' as grid-menu;
+@use 'header/src/scss/component' as header;
 @use 'lists/src/scss/component' as lists;
 @use 'main-menu/src/scss/component' as main-menu;
 @use 'pane/src/scss/component' as pane;
